Use authentication implemented using JwT Token, user login and register implemented
