# src/main/java/com/nowoczesnyjunior/financialapp/usermodule/model/LoginCredentials.java
@@ -1,4 +1,0 @@
-package com.nowoczesnyjunior.financialapp.usermodule.model;
-
-public record LoginCredentials(String username, String password) {
-}
