# src/main/resources/static/openapi.yaml
@@ -20,6 +20,8 @@ paths:
       tags:
         - expense
       summary: Add a new expense
+      security:
+        - bearerAuth: ['read', 'write']
       description: Add a new expense
       operationId: addExpense
       requestBody:
@@ -54,15 +56,13 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ApiResponse"
-#      security:
-#        - financialapp_auth:
-#            - write:expenses
-#            - read:expenses
 
     get:
       tags:
         - expense
       summary: Get expenses with criteria
+      security:
+        - bearerAuth: [ 'read', 'write' ]
       description: Get expenses based on various criteria such as time period, grouping by categories, and top 5 expenses.
       operationId: getExpenses
       parameters:
@@ -107,6 +107,8 @@ paths:
       tags:
         - expense
       summary: Edit an expense by ID
+      security:
+        - bearerAuth: [ 'read', 'write' ]
       description: Edit an existing expense by its unique ID.
       operationId: editExpense
       parameters:
@@ -148,6 +150,8 @@ paths:
       tags:
         - expense
       summary: Delete an expense by ID
+      security:
+        - bearerAuth: [ 'read', 'write' ]
       description: Delete an existing expense by its unique ID.
       operationId: deleteExpense
       parameters:
@@ -173,6 +177,8 @@ paths:
       tags:
         - budget
       summary: Create a new budget
+      security:
+        - bearerAuth: [ 'read', 'write' ]
       description: Create a new budget
       operationId: createBudget
       requestBody:
@@ -212,6 +218,8 @@ paths:
       tags:
         - budget
       summary: Get a list of budgets
+      security:
+        - bearerAuth: [ 'read', 'write' ]
       description: Get a list of budgets
       operationId: getBudgets
       responses:
@@ -235,6 +243,8 @@ paths:
       tags:
         - budget
       summary: Get a specific budget by ID
+      security:
+        - bearerAuth: [ 'read', 'write' ]
       description: Get a specific budget by its unique ID
       operationId: getBudgetById
       parameters:
@@ -268,6 +278,8 @@ paths:
       tags:
         - budget
       summary: Update a budget by ID
+      security:
+        - bearerAuth: [ 'read', 'write' ]
       description: Update an existing budget by its unique ID
       operationId: updateBudgetById
       parameters:
@@ -314,6 +326,8 @@ paths:
       tags:
         - budget
       summary: Delete a budget by ID
+      security:
+        - bearerAuth: [ 'read', 'write' ]
       description: Delete an existing budget by its unique ID
       operationId: deleteBudgetById
       parameters:
@@ -340,93 +354,58 @@ paths:
                 $ref: "#/components/schemas/ApiResponse"
 
 
-  /user:
+  /user/register:
     post:
       tags:
         - user
-      summary: Create user
-      description: This can only be done by the logged in user.
+      summary: Register new user
       operationId: createUser
       requestBody:
         description: Created user object
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/RegisterDetails'
           application/xml:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/RegisterDetails'
           application/x-www-form-urlencoded:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/RegisterDetails'
       responses:
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorList"
         default:
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
-  /user/createWithList:
-    post:
-      tags:
-        - user
-      summary: Creates list of users with given input array
-      description: Creates list of users with given input array
-      operationId: createUsersWithListInput
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: array
-              items:
-                $ref: '#/components/schemas/User'
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-        default:
-          description: successful operation
+                $ref: '#/components/schemas/Token'
+
   /user/login:
-    get:
+    post:
       tags:
         - user
       summary: Logs user into the system
       description: ''
       operationId: loginUser
-      parameters:
-        - name: username
-          in: query
-          description: The user name for login
-          required: false
-          schema:
-            type: string
-        - name: password
-          in: query
-          description: The password for login in clear text
-          required: false
-          schema:
-            type: string
+      requestBody:
+        description: Validate User by his CredentialDetails
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CredentialDetails'
       responses:
         '200':
           description: successful operation
-          headers:
-            X-Rate-Limit:
-              description: calls per hour allowed by the user
-              schema:
-                type: integer
-                format: int32
-            X-Expires-After:
-              description: date in UTC when token expires
-              schema:
-                type: string
-                format: date-time
           content:
             application/json:
               schema:
-                type: string
+                $ref: '#/components/schemas/Token'
         '400':
           description: Invalid username/password supplied
   /user/logout:
@@ -445,6 +424,8 @@ paths:
       tags:
         - user
       summary: Get user by user name
+      security:
+        - bearerAuth: [ 'read', 'write' ]
       description: ''
       operationId: getUserByName
       parameters:
@@ -472,6 +453,8 @@ paths:
       tags:
         - user
       summary: Update user
+      security:
+        - bearerAuth: [ 'read', 'write' ]
       description: This can only be done by the logged in user.
       operationId: updateUser
       parameters:
@@ -500,6 +483,8 @@ paths:
       tags:
         - user
       summary: Delete user
+      security:
+        - bearerAuth: [ 'read', 'write' ]
       description: This can only be done by the logged in user.
       operationId: deleteUser
       parameters:
@@ -516,7 +501,6 @@ paths:
           description: User not found
 components:
   schemas:
-
     Expense: 
       type: object
       properties:
@@ -615,7 +599,40 @@ components:
           example: 1
       xml:
         name: user
-    
+
+    CredentialDetails:
+      type: object
+      properties:
+        username:
+          type: string
+          format: email
+        password:
+          type: string
+      required:
+        - username
+        - password
+
+    RegisterDetails:
+      type: object
+      properties:
+        username:
+          type: string
+          format: email
+        password:
+          type: string
+        repeatedPassword:
+          type: string
+      required:
+        - username
+        - password
+        - repeatedPassword
+
+    Token:
+      type: object
+      properties:
+        token:
+          type: string
+
     ApiResponse:
       type: object
       properties:
@@ -631,6 +648,12 @@ components:
           example: "You are not authorized to perform this operation"
       xml:
         name: '##default'
+
+    ErrorList:
+      type: array
+      items:
+        $ref: "#/components/schemas/ApiResponse"
+
   requestBodies:
     Expense:
       description: Expense object that needs to be added
@@ -649,16 +672,11 @@ components:
             type: array
             items:
               $ref: '#/components/schemas/User'
-#  securitySchemes:
-#    financialapp_auth:
-#      type: oauth2
-#      flows:
-#        implicit:
-#          authorizationUrl: https://expenses.swagger.io/oauth/authorize
-#          scopes:
-#            write:expenses: modify expenses in your account
-#            read:expenses: read your expenses
-#    api_key:
-#      type: apiKey
-#      name: api_key
-#      in: header
+  securitySchemes:
+    bearerAuth:
+      description: Bearer token using a JWT
+      type: http
+      scheme: Bearer
+      bearerFormat: JWT
+      in: header
+      name: Authorization
